<resources>
    <string name="app_name">Epill</string>
    <string name="ordonnanceList_title">Prescription List</string>
    <string name="medicament_name">Name</string>
    <string name="frequence_label">Frequence (times/day)</string>
    <string name="duration_label">Duration (days)</string>
    <string name="new_ordonnance">Add new prescription</string>
    <string name="ordonnance_name">Name</string>
    <string name="ordonnance_mailDoc">Doctor\'s mail</string>
    <string name="ordonnance_description">Description</string>
    <string name="medicament_information">Medicine List</string>
</resources>
