<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:id="@+id/info_ordonnance">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordonnance_name"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText android:id="@+id/ordonnance_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordonnance_mailDoc"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText android:id="@+id/ordonnance_mailDoc"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordonnance_description"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText android:id="@+id/ordonnance_description"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/medicament_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Confirm"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicament_information"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/medicament_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Add medicine"/>


</LinearLayout>
