<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicament_name"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText android:id="@+id/medicament_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frequence_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText android:id="@+id/medicament_frequence"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:digits="0123456789"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText android:id="@+id/medicament_duration"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:digits="0123456789"/>
    <Button
        android:id="@+id/medicament_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Add time"/>
    <Button
        android:id="@+id/medicament_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="Confirm"/>



</LinearLayout>

